--- a/src/components/sidebar/styles/Sidebar.module.css
+++ b/src/components/sidebar/styles/Sidebar.module.css
@@ -5,6 +5,7 @@
   display: flex;
   flex-direction: column;
   background: var(--color-background-inverse);
+  overflow: hidden;
 }
 
 @media (max-width: 767px) {
@@ -14,7 +15,6 @@
 }
 
 .collapsed {
-  width: 72px;
   position: relative;
 }
 
@@ -64,6 +64,7 @@
   padding: 0 16px;
   gap: 8px;
   flex: 1;
+  white-space: nowrap;
 }
 
 .collapsed .content {
